--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1,4 +1,4 @@
-
+﻿
 /* fonts starts from here */
 @font-face {
     font-family: 'bakersfieldbold';
@@ -24,11 +24,11 @@
    Note: Fluid media requires that you remove the media's height and width attributes from the HTML
    http://www.alistapart.com/articles/fluid-images/ 
 */
-img, object, embed, video {
+object, embed, video {
     max-width: 100%;
 }
 /* IE 6 does not support max-width so default to width 100% */
-.ie6 img {
+.ie6 {
     width: 100%;
 }
 
@@ -58,16 +58,18 @@ img, object, embed, video {
 /* for index page from here */
 .logo {
     width: 50%;
-    margin-left: 25%;
     margin-top: 5%;
     margin-bottom: 4%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .logo2 {
     width: 35%;
-    margin-left: 38%;
     margin-top: 10%;
     margin-bottom: 15%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .emailbox {
@@ -869,16 +871,18 @@ img, object, embed, video {
 
     .logo {
         width: 40%;
-        margin-left: 30%;
         margin-top: 2%;
         margin-bottom: 2%;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     .logo2 {
         width: 20%;
-        margin-left: 43%;
         margin-top: 5%;
         margin-bottom: 5%;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     .emailbox {
@@ -1662,16 +1666,18 @@ img, object, embed, video {
 
     .logo {
         width: 20%;
-        margin-left: 40%;
         margin-top: 2%;
         margin-bottom: 2%;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     .logo2 {
         width: 14%;
-        margin-left: 44%;
         margin-top: 3%;
         margin-bottom: 3%;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     .emailbox {
